refactor: ajustes sonar